Modificación en Los Botones, Añadir Activity Info y hacer funcional el Activity Insumos

--- a/app/src/main/res/layout/activity_insumos.xml
+++ b/app/src/main/res/layout/activity_insumos.xml
@@ -95,6 +95,7 @@
                 android:id="@+id/button3"
                 android:layout_width="143dp"
                 android:layout_height="49dp"
+                android:onClick="Calcular"
                 android:text="Calcular"
                 app:cornerRadius="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
