--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -127,8 +127,8 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="372dp"
-        android:layout_height="141dp"
+        android:layout_width="376dp"
+        android:layout_height="162dp"
         app:cardCornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,59 +141,60 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/button6"
-                android:layout_width="143dp"
-                android:layout_height="51dp"
-                android:layout_marginEnd="28dp"
-                android:text="Pedido Compra"
-                android:textSize="12dp"
+            <TableLayout
+                android:layout_width="354dp"
+                android:layout_height="147dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.144"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button4"
-                app:layout_constraintVertical_bias="0.478" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="143dp"
-                android:layout_height="51dp"
-                android:layout_marginTop="16dp"
-                android:onClick="Insumos"
-                android:text="Mis Productos"
-                android:textSize="12dp"
-                app:layout_constraintEnd_toStartOf="@+id/button5"
-                app:layout_constraintHorizontal_bias="0.509"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="143dp"
-                android:layout_height="51dp"
-                android:layout_marginTop="16dp"
-                android:text="Información"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.872"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                    <Button
+                        android:id="@+id/button9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:onClick="Insumos"
+                        android:text="Mis Productos"
+                        app:cornerRadius="20dp" />
 
-            <Button
-                android:id="@+id/button7"
-                android:layout_width="143dp"
-                android:layout_height="51dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="11dp"
-                android:layout_marginEnd="29dp"
-                android:layout_marginBottom="12dp"
-                android:text="Nuevo Pedido"
-                android:textSize="13dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/button6"
-                app:layout_constraintTop_toBottomOf="@+id/button5" />
+                    <Button
+                        android:id="@+id/button8"
+                        android:layout_width="164dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="10dp"
+                        android:onClick="Info"
+                        android:text="Información"
+                        app:cornerRadius="20dp" />
+                </TableRow>
 
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/button10"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:minHeight="48dp"
+                        android:text="Pedido Compra"
+                        app:cornerRadius="20dp" />
+
+                    <Button
+                        android:id="@+id/button11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Pedido Nuevo"
+                        app:cornerRadius="20dp" />
+                </TableRow>
+
+            </TableLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
