--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -158,6 +158,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:backgroundTint="#1F6C22"
                         android:onClick="Insumos"
                         android:text="Mis Productos"
                         app:cornerRadius="20dp" />
@@ -167,6 +168,7 @@
                         android:layout_width="164dp"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
+                        android:backgroundTint="#1F6C22"
                         android:onClick="Info"
                         android:text="Información"
                         app:cornerRadius="20dp" />
@@ -181,6 +183,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:backgroundTint="#1F6C22"
                         android:minHeight="48dp"
                         android:text="Pedido Compra"
                         app:cornerRadius="20dp" />
@@ -190,6 +193,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:backgroundTint="#1F6C22"
                         android:text="Pedido Nuevo"
                         app:cornerRadius="20dp" />
                 </TableRow>
