--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,10 +75,10 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:onClick="IniciarSesion"
+                    android:backgroundTint="#1F6C22"
                     android:text="Iniciar Sesión"
                     app:cornerRadius="20dp" />
 
@@ -86,10 +86,12 @@
                     android:id="@+id/button2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="#1F6C22"
                     android:minHeight="48dp"
                     android:onClick="CerrarApp"
                     android:text="Salir de Anime Shop"
                     app:cornerRadius="20dp" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -135,20 +137,37 @@
                     android:onClick="Youtube"
                     app:srcCompat="@drawable/youtubeico"
                     tools:ignore="SpeakableTextPresentCheck" />
+
             </LinearLayout>
 
             <TextView
                 android:id="@+id/msj"
-                android:layout_width="284dp"
-                android:layout_height="28dp"
+                android:layout_width="276dp"
+                android:layout_height="32dp"
                 android:textColor="#F44336"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.195"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                app:layout_constraintVertical_bias="0.578" />
+                app:layout_constraintVertical_bias="0.4" />
+
+            <ProgressBar
+                android:id="@+id/pb"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="85dp"
+                android:layout_height="57dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="2dp"
+                android:background="#00E91E63"
+                android:progressTint="#136716"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.916"
+                app:layout_constraintStart_toEndOf="@+id/msj"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -176,5 +195,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
