Implimentar Google Maps y Intent Implicito para realizar una llamada

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -164,14 +164,14 @@
                         app:cornerRadius="20dp" />
 
                     <Button
-                        android:id="@+id/button8"
-                        android:layout_width="164dp"
-                        android:layout_height="match_parent"
+                        android:id="@+id/button11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:backgroundTint="#1F6C22"
-                        android:onClick="Info"
-                        android:text="Información"
+                        android:text="Pedido Nuevo"
                         app:cornerRadius="20dp" />
+
                 </TableRow>
 
                 <TableRow
@@ -189,13 +189,15 @@
                         app:cornerRadius="20dp" />
 
                     <Button
-                        android:id="@+id/button11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/button8"
+                        android:layout_width="164dp"
+                        android:layout_height="match_parent"
                         android:layout_margin="10dp"
                         android:backgroundTint="#1F6C22"
-                        android:text="Pedido Nuevo"
+                        android:onClick="CerrarSesión"
+                        android:text="Cerrar Sesión"
                         app:cornerRadius="20dp" />
+
                 </TableRow>
 
             </TableLayout>
