--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -85,6 +85,7 @@
                 android:layout_height="59dp"
                 android:layout_marginTop="28dp"
                 android:backgroundTint="#00FFFFFF"
+                android:onClick="Marcar"
                 app:layout_constraintEnd_toStartOf="@+id/imageButton9"
                 app:layout_constraintHorizontal_bias="0.323"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +99,7 @@
                 android:layout_height="58dp"
                 android:layout_marginBottom="44dp"
                 android:backgroundTint="#00FFFFFF"
+                android:onClick="Maps"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.821"
