--- a/app/src/main/res/layout/activity_nuevo_pact.xml
+++ b/app/src/main/res/layout/activity_nuevo_pact.xml
@@ -3,62 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    tools:context=".PedidoC_Act">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView5"
-        android:layout_width="362dp"
-        android:layout_height="159dp"
-        android:layout_marginTop="15dp"
-        app:cardCornerRadius="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="156dp">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="145dp"
-                android:layout_height="140dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.074"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/carro" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="178dp"
-                android:layout_height="95dp"
-                android:text="Esta sección usted podra realizar Pedidos de Compra Ingresando los Datos Solicitados"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/button5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.304"
-                app:layout_constraintStart_toEndOf="@+id/imageView4" />
-
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="135dp"
-                android:layout_height="48dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#1F6C22"
-                android:onClick="Volver"
-                android:text="Volver"
-                app:cornerRadius="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.94"
-                app:layout_constraintStart_toStartOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    android:layout_height="match_parent"
+    tools:context=".NuevoP_Act">
 
     <androidx.cardview.widget.CardView
         android:layout_width="358dp"
@@ -85,13 +32,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <Spinner
-                    android:id="@+id/spnCodigo"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:scrollbarSize="12dp"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
                 <EditText
                     android:id="@+id/editCodigo"
                     android:layout_width="match_parent"
@@ -102,11 +42,20 @@
                     android:minHeight="48dp" />
 
                 <EditText
+                    android:id="@+id/editNom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Ingrse su Nombre"
+                    android:inputType="textPersonName"
+                    android:minHeight="48dp" />
+
+                <EditText
                     android:id="@+id/editCant"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Ingrese Cantidad"
+                    android:hint="Ingrese la Categoria"
                     android:inputType="textPersonName"
                     android:minHeight="48dp" />
 
@@ -115,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Ingrese Su Dirección"
+                    android:hint="Ingrese el Anime"
                     android:inputType="textPersonName"
                     android:minHeight="48dp" />
 
@@ -173,6 +122,59 @@
                     app:cornerRadius="20dp" />
 
             </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView5"
+        android:layout_width="362dp"
+        android:layout_height="159dp"
+        android:layout_marginTop="15dp"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="156dp">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="132dp"
+                android:layout_height="113dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.074"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/pedido" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="178dp"
+                android:layout_height="95dp"
+                android:text="Esta sección usted podra realizar Pedidos de Compra Ingresando los Datos Solicitados"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/button5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.304"
+                app:layout_constraintStart_toEndOf="@+id/imageView4" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="135dp"
+                android:layout_height="48dp"
+                android:layout_margin="5dp"
+                android:backgroundTint="#1F6C22"
+                android:onClick="Volver"
+                android:text="Volver"
+                app:cornerRadius="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.94"
+                app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
